feat: implement countdown freeze logging and enhance teleportation handling for boats refactor: clean up unused imports and improve code readability across various classes fix: update teleportation logic to ensure proper entity positioning and rotation during countdown